--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ h1,h2 {
 }
 #main-image #tailor-image img {
     width: 100%;
-    z-index: -1;
+    z-index: -10;
     margin-top: 3%;
     height: auto;
 }
@@ -455,7 +455,7 @@ h1,h2 {
 #about {
     width: 100%;
     align-items: center;
-    margin-bottom: 150px;
+   margin-top: 400px;
 }
 
 #about .content h2 {
@@ -551,7 +551,7 @@ h1,h2 {
     margin-right: 1%;
 }
 #dress-type {
-    margin-top: 350px;
+    margin-top: 420px;
     background-color: #fafafa;
     margin-bottom: 50px;
     margin-left: 4%;
@@ -690,7 +690,7 @@ h1,h2 {
 #contact-page {
     width: 100%;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 80px;
 }
 
 
@@ -952,11 +952,24 @@ h1,h2 {
         width:100%;
         float: left;
     }
+    /* #news form button {
+        margin-left: 40%;
+        margin-right: 50%;
+        margin-top:10px;
+        font-size:90%;
+        padding: 10px 20px;
+    } */
 
     /* contact page */
     #contact,#contact-form {
         float: left;
         width: 100%;
+    }
+    #contact-form {
+        margin-top: -45px;
+    }
+    #contact {
+        margin-top: -5px;
     }
     .text-input {
         width: 80%;
@@ -1072,23 +1085,45 @@ h1,h2 {
         text-align: center;
     }
     /* about page */
+    #about {
+        margin-top: -150px;
+    }
     #how-we-started {
         width: 100%;
         float: left;
         text-align: center;
         padding: 5px 5px;
-        margin-bottom: 25px;
+        /* margin-top: -50px; */
     }
     #group {
         width:100%;
         float: left;
+        /* margin: 0 auto; */
+        align-items: center;
     }
     /* news letter */
     #news {
         height: 100px;
     }
-    #news h2 {
+    #news h3 {
         font-size: 90%;
+    }
+    #news form input {
+        width: 60%;
+        height: 30px;
+        margin-left: 20%;
+        margin-right: 20%;
+        border-radius: 5px;
+        font-size: 70%;
+        
+    }
+    #news form button {
+        margin-left: 40%;
+        margin-right: 50%;
+        margin-top:5px;
+        border-radius: 10px;
+        font-size:80%;
+        padding: 5px 10px;
     }
 
     
@@ -1126,7 +1161,13 @@ h1,h2 {
         float: left;
         width: 100%;
         clear: both;
-        /* margin-top: -400px; */
+        
+    }
+    #contact-form {
+        margin-top: -250px;
+    }
+    #contact {
+        margin-top: -5px;
     }
     .text-input {
         width: 80%;
