--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h1,h2 {
 }
 #container {
     display: block;
-    justify-content: center;
+    margin: 0 auto;
     width: 100%;
     background-color: #292F36;;
     border-bottom: 2px solid #7C4E29;
@@ -43,7 +43,7 @@ h1,h2 {
     position: fixed;
     z-index: 800;
     top: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     
 }
 
@@ -109,6 +109,7 @@ h1,h2 {
     width: 100%;
     height: 600px;
     display: block;
+    margin: 0 auto;
     position: relative;
 }
 #main-image #tailor-image img {
@@ -846,11 +847,11 @@ h1,h2 {
     }
     /* about */
     #about {
-        margin-top: 650px;
+        margin-top: 700px;
     }
     /* services */
     #service {
-        margin-top: 650px;
+        margin-top: 750px;
     }
     /* contact */
     #contact-page {
@@ -861,10 +862,7 @@ h1,h2 {
 /* Large devices (laptops/desktops, 992px and up) */
 
 @media screen and (min-width: 993px) and (max-width: 1199px) {
-    #container {
-        max-width: 1024px;
-        
-    }
+   
     #container #logo-container #logo img {
         margin-left: 60px;
     }
@@ -872,7 +870,7 @@ h1,h2 {
      #welcome {
         height: auto;
         top: 80%;
-        /* font-size: 90%; */
+       
     }
     #welcome > h1 {
         font-size: 180%;
@@ -1037,22 +1035,26 @@ h1,h2 {
         justify-content: center;
     }
     /* header & navigation */
+
     #container #logo-container #logo img {
       
         margin-left: 10px;
+        font-size: 80%;
     }
     #container nav {
         float: left;
-        margin-top: 15px;
-        margin-right: -80px;
+        margin-top: 25px;
+        margin-right: -70px;
+        margin-left: -105px;
     }
+    
     #container nav li {
         margin-right: 0;
         margin-bottom: 2px;
         margin-left: -5px;
     }
     #container nav a {
-        font-size: 40%;
+        font-size: 60%;
         padding: 1px 5px;
     }
     #welcome {
@@ -1205,8 +1207,14 @@ h1,h2 {
 /* Super Extra Small devices  */
 
 @media screen and (max-width: 360px) {
-    #container #logo img {
-        width: 42%;
+    #container #logo-container #logo img {
+        margin-left: -10px;
+    }
+    #container nav {
+        float: left;
+        margin-top: 25px;
+        margin-right: -70px;
+        margin-left: -75px;
     }
     
     #welcome {
