--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,9 +120,8 @@ h2 {
 #main-image {
     width: 100%;
     height: 600px;
-    /* display: block;
-    margin: 0 auto; */
-    z-index: 0;
+    display: block;
+    /* margin: 0 auto; */
     position: relative;
 }
 
@@ -130,6 +129,7 @@ h2 {
     width: 100%;
     z-index: -10;
     margin-top: 3%;
+    position: absolute;
     height: auto;
 }
 
