--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ h2 {
     width: 100%;
     height: 600px;
     display: block;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     position: relative;
 }
 
@@ -129,8 +129,6 @@ h2 {
     width: 100%;
     z-index: -10;
     margin-top: 3%;
-    margin-left: 4%;
-    margin-right: 4%;
     position: absolute;
     height: auto;
 }
@@ -903,6 +901,10 @@ h3 {
     .container #logo-container #logo img {
         margin-left: 80px;
     }
+    #main-image #tailor-image img {
+        margin-left: 4%;
+        margin-right: -4%;
+    }
 
     #welcome {
         top: 750px;
@@ -939,6 +941,10 @@ h3 {
 
     .container #logo-container #logo img {
         margin-left: 60px;
+    }
+    #main-image #tailor-image img {
+        margin-left: 4%;
+        margin-right: -4%;
     }
 
     /* welcome */
